<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/coinIcon"
        android:layout_width="@dimen/icon_size"
        android:layout_height="@dimen/icon_size"
        android:layout_margin="@dimen/default_margin"
        android:contentDescription="@string/crypto_currency_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/coinSymbol"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher_round" />

    <TextView
        android:id="@+id/coinSymbol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_margin"
        android:textSize="@dimen/medium_text_size"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/coinIcon"
        app:layout_constraintTop_toTopOf="@id/coinIcon" />

    <TextView
        android:id="@+id/coinDivider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/small_margin"
        android:layout_marginBottom="@dimen/small_margin"
        android:text="|"
        android:textSize="@dimen/medium_text_size"
        app:layout_constraintStart_toEndOf="@+id/coinSymbol"
        app:layout_constraintTop_toTopOf="@id/coinSymbol" />

    <TextView
        android:id="@+id/coinName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/small_margin"
        android:textSize="@dimen/medium_text_size"
        app:layout_constraintStart_toEndOf="@+id/coinDivider"
        app:layout_constraintTop_toTopOf="@id/coinDivider" />

    <TextView
        android:id="@+id/priceUsdText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/large_text_size"
        app:layout_constraintEnd_toStartOf="@+id/dollarSign"
        app:layout_constraintTop_toTopOf="@+id/coinIcon" />

    <TextView
        android:id="@+id/dollarSign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/default_margin"
        android:text="@string/dollar_sign"
        android:textSize="@dimen/large_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/coinIcon" />

    <TextView
        android:id="@+id/oneHourText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_margin"
        android:text="@string/sign_1h"
        app:layout_constraintBottom_toBottomOf="@+id/coinIcon"
        app:layout_constraintEnd_toStartOf="@+id/percentChange1HText"
        app:layout_constraintStart_toEndOf="@+id/coinIcon" />

    <TextView
        android:id="@+id/percentChange1HText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/coinIcon"
        app:layout_constraintEnd_toStartOf="@+id/twentyFourHoursText"
        app:layout_constraintStart_toEndOf="@+id/oneHourText" />

    <TextView
        android:id="@+id/twentyFourHoursText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_24h"
        app:layout_constraintBottom_toBottomOf="@+id/coinIcon"
        app:layout_constraintEnd_toStartOf="@+id/percentChange24HText"
        app:layout_constraintStart_toEndOf="@+id/percentChange1HText" />

    <TextView
        android:id="@+id/percentChange24HText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/coinIcon"
        app:layout_constraintEnd_toStartOf="@+id/daysText"
        app:layout_constraintStart_toEndOf="@+id/twentyFourHoursText" />

    <TextView
        android:id="@+id/daysText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_7d"
        app:layout_constraintBottom_toBottomOf="@+id/coinIcon"
        app:layout_constraintEnd_toStartOf="@+id/percentChange7DText"
        app:layout_constraintStart_toEndOf="@+id/percentChange24HText" />

    <TextView
        android:id="@+id/percentChange7DText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/default_margin"
        app:layout_constraintBottom_toBottomOf="@+id/coinIcon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/daysText" />

</androidx.constraintlayout.widget.ConstraintLayout>